<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyMovieLog</string>
    <string name="nav_home">홈</string>
    <string name="nav_search">검색</string>
    <string name="nav_library">라이브러리</string>
    <string name="nav_stats">통계</string>
    <string name="nav_profile">프로필</string>
</resources>
